java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting/a35.java
// unclosed comment
/*

import java.io.*;
import java.net.*;

class a {
<error descr="Unclosed comment">}</error>